--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,19 @@
 <h1>Projects#show</h1>
 <h2><%= @project.name %></h2>
-<div>
-  <% @project.column.each do |c| %>
-    <div><%= c.name %></div>
-  <% end %>
+<div><%= link_to 'models', {controller: :models, action: :index} %></div>
+<div class="col-lg-12">
+  <table class="table">
+  <thead>
+    <tr>
+      <th>name</th>
+      <th>type</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @project.column.each do |c| %>
+    <tr>
+      <td> <%= c.name %> </td>
+      <td> <%= c.type %> </td>
+    </tr>
+    <% end %>
 </div>
