--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,14 +5,35 @@
   <thead>
     <tr>
       <th>name</th>
+      <th>edit</th>
     </tr>
   </thead>
   <tbody>
     <% @projects.each do |p| %>
     <tr>
+      <td> <%= link_to p.name, {:controller => :projects, :action => :show, :id => p.id } %> </td>
       <td>
-        <%= link_to p.name, {:controller => :projects, :action => :show, :id => p.id } %>
+        <button type="button" class="edit_project" data-project_id="<%= p.id %>" data-project_name="<%= p.name %>" data-toggle="modal" data-target="#project_edit_modal">Edit</button>
       </td>
     </tr>
     <% end %>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="project_edit_modal" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Edit Project</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        body
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
