--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="form-group">
     <label for="moduel_name">name</label>
-    <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="name">
+    <input type="text" class="form-control" id="name" name="project[name]" aria-describedby="name" placeholder="name">
   </div>
   <div class="actions">
     <%= form.submit %>
