--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <%= link_to 'algorithm', {controller: :algorithms, action: :index}, class: "dropdown-item" %>
+              <%= link_to 'preprocess algorithm', {controller: :preprocess_algorithms, action: :index}, class: "dropdown-item" %>
             </div>
           </li>
         </ul>
