--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,6 +14,9 @@
   </div>
 </div>
 <div class="col-lg-12">
+  <button type="button" id="go_predict" data-toggle="modal" data-target="#project_edit_modal">Predict</button>
+</div>
+<div class="col-lg-12">
   <table class="table">
   <thead>
     <tr>
@@ -40,4 +43,23 @@
     <% end %>
   </tbody>
   </table>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="go_predict_modal" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Select algorithms</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        body
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
