--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,65 +1,4 @@
-<h2><%= @project.name %></h2>
-<div><%= link_to 'models', {controller: :models, action: :index} %></div>
-<div><%= link_to 'analyze columns', {controller: :analyses, action: :columns, :project_id => @project.id } %></div>
-<div class="col-lg-12">
-  <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      dataset
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <% @project.preprocessed_datum.each do |p| %>
-         <%= link_to p.name, {controller: 'projects', action: 'show', id: @project._id, preprocessed_datum_id: p._id}, class: "dropdown-item" %>
-      <% end %>
-    </div>
-  </div>
-</div>
-<div class="col-lg-12">
-  <button type="button" id="go_predict" data-toggle="modal" data-target="#project_edit_modal">Predict</button>
-</div>
-<div class="col-lg-12">
-  <table class="table">
-  <thead>
-    <tr>
-      <th></th>
-      <th>target</th>
-      <th>active</th>
-      <th>name</th>
-      <th>type</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @preprocessed_datum.column.each do |c| %>
-    <tr>
-      <td>
-        <%= form_tag({controller: 'columns', action: "update_target", id: c._id}, method: 'put') do |cc| %>
-          <%= submit_tag 'target' %>
-        <% end %>
-      </td>
-      <td><%= c.target %></td>
-      <td><%= c.active %></td>
-      <td><%= c.name %></td>
-      <td>数値</td>
-    </tr>
-    <% end %>
-  </tbody>
-  </table>
-</div>
+<p id="notice"><%= notice %></p>
 
-<!-- Modal -->
-<div class="modal fade" id="go_predict_modal" role="dialog">
-  <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Select algorithms</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-      <div class="modal-body">
-        body
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+<%= link_to 'Edit', edit_project_path(@project) %> |
+<%= link_to 'Back', projects_path %>
