--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,37 +1,25 @@
-<div class="col-lg-12">
-  <table class="table">
+<p id="notice"><%= notice %></p>
+
+<h1>Projects</h1>
+
+<table>
   <thead>
     <tr>
-      <th>name</th>
-      <th>edit</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
-  <tbody>
-    <% @projects.each do |p| %>
-    <tr>
-      <td> <%= link_to p.name, {:controller => :projects, :action => :show, :id => p.id } %> </td>
-      <td>
-        <button type="button" class="edit_project" data-project_id="<%= p.id %>" data-project_name="<%= p.name %>" data-toggle="modal" data-target="#project_edit_modal">Edit</button>
-      </td>
-    </tr>
-    <% end %>
-</div>
 
-<!-- Modal -->
-<div class="modal fade" id="project_edit_modal" role="dialog">
-  <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Edit Project</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-      <div class="modal-body">
-        body
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+  <tbody>
+    <% @projects.each do |project| %>
+      <tr>
+        <td><%= link_to 'Show', project %></td>
+        <td><%= link_to 'Edit', edit_project_path(project) %></td>
+        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Project', new_project_path %>
