--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,10 +1,5 @@
-<div>
-  <%= form_for @project do |f| %>
-  <div class="field">
-    <%= f.file_field :upload_file %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Upload" %>
-  </div>
-<% end %>
-</div>
+<h1>New Project</h1>
+
+<%= render 'form', project: @project %>
+
+<%= link_to 'Back', projects_path %>
