add rake command to create data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,10 @@
             <%= link_to 'Projects', {controller: :projects, action: :index},  class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <%= link_to 'algorithm', {controller: :algorithms, action: :index}, class: "dropdown-item" %>
-              <%= link_to 'preprocess algorithm', {controller: :preprocess_algorithms, action: :index}, class: "dropdown-item" %>
+              <%= link_to 'machine learning', {controller: :machine_learning_algorithms, action: :index}, class: "dropdown-item" %>
+              <%= link_to 'preprocess', {controller: :preprocess_algorithms, action: :index}, class: "dropdown-item" %>
             </div>
           </li>
         </ul>
