--- a/app/views/project_data/_form.html.erb
+++ b/app/views/project_data/_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <div>
+    <%= form.file_field_tag 'project_data' %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
