--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -11,6 +11,9 @@
     </div>
   <% end %>
 
+  <div>
+    <%= form.text_field :name %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
