--- a/app/views/project_data/index.html.erb
+++ b/app/views/project_data/index.html.erb
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Project Datum', new_project_datum_path %>
+<%= link_to 'New Project Datum', new_project_project_datum_path %>
