--- a/app/views/project_data/new.html.erb
+++ b/app/views/project_data/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', project_datum: @project_datum %>
 
-<%= link_to 'Back', project_data_path %>
+<%= link_to 'Back', project_project_data_path %>
