--- a/app/views/project_data/show.html.erb
+++ b/app/views/project_data/show.html.erb
@@ -1,3 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_project_datum_path(@project_datum) %> |
+<div><%= @project_datum.name %></div>
+<div>
+  <table>
+    <thead>
+      <tr>
+        <th>name</th>
+        <th>type</th>
+        <th>active</th>
+        <th>target</th>
+      </tr>
+    </thead>
+    <tbody>
+    <%= @project_datum.project_datum_columns.each do |c| %>
+      <tr>
+        <td><%= c.name %></td>
+        <td><%= c.type %></td>
+        <td><%= c.active %></td>
+        <td><%= c.target %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+</div>
+
+<%= link_to 'Edit', edit_project_datum_path(@project_datum) %>
