implemented one more queue

--- a/app/views/project_data/show.html.erb
+++ b/app/views/project_data/show.html.erb
@@ -30,7 +30,8 @@
 
 <div class="actions">
   <%= hidden_field_tag "process_columns_request[task]", "columns_type" %>
-  <%= submit_tag 'analyze' %>
+  <%= submit_tag 'analyze columns' %>
+  <%= button_tag 'preprocessing', :id => 'preprocessing' %>
 </div>
 <% end %>
 
