change layout and looks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       </div>
     </nav>
 
-  <main role="main" class="container">
+  <main role="main" class="container-fluid">
     <%= yield %>
   </main>
   </body>
