--- a/app/views/project_data/show.html.erb
+++ b/app/views/project_data/show.html.erb
@@ -1,31 +1,36 @@
 <p id="notice"><%= notice %></p>
-
-<div><%= @project_datum.name %></div>
-<%= form_with model: @project_datum, url: process_columns_path, method: 'post' do |form| %>
-<%= form.hidden_field :id %>
-<div>
-  <table>
-    <thead>
-      <tr>
-        <th>-</th>
-        <th>name</th>
-        <th>type</th>
-        <th>active</th>
-        <th>target</th>
-      </tr>
-    </thead>
-    <tbody>
-    <% @project_datum.project_datum_columns.each do |c| %>
-      <tr>
-        <td><%= check_box_tag "project_datum_columns[id][]", c._id %></td>
-        <td><%= c.name %></td>
-        <td><%= c.type %></td>
-        <td><%= c.active %></td>
-        <td><%= c.target %></td>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
+<div class="row">
+  <div class="col col-lg-4">
+    <h1><%= @project_datum.name %></h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col col-lg-12">
+  <%= form_with model: @project_datum, url: process_columns_path, method: 'post' do |form| %>
+  <%= form.hidden_field :id %>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>-</th>
+          <th>name</th>
+          <th>type</th>
+          <th>active</th>
+          <th>target</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @project_datum.project_datum_columns.each do |c| %>
+        <tr>
+          <td><%= check_box_tag "project_datum_columns[id][]", c._id %></td>
+          <td><%= c.name %></td>
+          <td><%= c.type %></td>
+          <td><%= c.active %></td>
+          <td><%= c.target %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <div class="actions">
@@ -34,5 +39,3 @@
   <%= button_tag 'preprocessing', :id => 'preprocessing' %>
 </div>
 <% end %>
-
-<%= link_to 'Edit', edit_project_datum_path(@project_datum) %>
