--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -11,10 +11,17 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.text_field :name %>
+  <div class="row justify-content-lg-center">
+    <div class="form-group col col-lg-2">
+      <%= form.label :name, 'Project Name'  %>
+    </div>
   </div>
-  <div class="actions">
-    <%= form.submit %>
+  <div class="row justify-content-lg-center">
+    <div class="form-group col col-lg-2">
+      <%= form.text_field :name  %>
+    </div>
+    <div class="actions col col-lg-2">
+      <%= form.submit "create", :class => 'btn btn-primary' %>
+    </div>
   </div>
 <% end %>
