--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,27 +1,27 @@
 <p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col col-lg-3">
+    <h1>Project List</h1>
+  </div>
+</div>
 
-<h1>Projects</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+<div class="row">
+  <div class="col col-lg-12">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Created At</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @projects.each do |project| %>
+        <tr class="js-project-row" data-project-id="<%= project.id %>">
+          <td><%= project.name %></td>
+          <td><%= project.created_at %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
