--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Project</h1>
-
-<%= render 'form', project: @project %>
-
-<%= link_to 'Back', projects_path %>
+<div class="col-lg-12">
+  <h1>New Project</h1>
+</div>
+<div class="new_project_container row">
+  <div class="col-lg-12">
+    <%= render 'form', project: @project %>
+  </div>
+</div>
