--- a/app/views/preprocess_algorithms/select_preprocess_algorithms.erb
+++ b/app/views/preprocess_algorithms/select_preprocess_algorithms.erb
@@ -7,10 +7,12 @@
   <%= hidden_field_tag 'project_datum_columns[id][]', c %>
 <% end %>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th colspan="2"></th>
+      <th></th>
+      <th>name</th>
+      <th>parameters</th>
     </tr>
   </thead>
 
@@ -18,8 +20,8 @@
     <% @preprocess_algorithms.each do |preprocess_algorithm| %>
       <tr>
         <td><%= check_box_tag "preprocess_algorithms[id][]", preprocess_algorithm.id %></td>
-        <td><%= preprocess_algorithm.module_name %></td>
         <td><%= preprocess_algorithm.class_name %></td>
+        <td>T.B.Developed</td>
       </tr>
     <% end %>
   </tbody>
