--- a/app/views/preprocess_algorithms/index.html.erb
+++ b/app/views/preprocess_algorithms/index.html.erb
@@ -2,24 +2,26 @@
 
 <h1>Preprocess Algorithms</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>category</th>
+      <th>module name</th>
+      <th>class name</th>
+      <th></th>
     </tr>
   </thead>
-
   <tbody>
     <% @preprocess_algorithms.each do |preprocess_algorithm| %>
       <tr>
-        <td><%= link_to 'Show', preprocess_algorithm %></td>
+        <td><%= preprocess_algorithm.category %></td>
+        <td><%= preprocess_algorithm.module_name %></td>
+        <td><%= preprocess_algorithm.class_name %></td>
         <td><%= link_to 'Edit', edit_preprocess_algorithm_path(preprocess_algorithm) %></td>
-        <td><%= link_to 'Destroy', preprocess_algorithm, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Preprocess Algorithm', new_preprocess_algorithm_path %>
+<div>
+  <%= link_to 'Add', new_preprocess_algorithm_path %>
+</div>
