--- a/app/views/project_data/new.html.erb
+++ b/app/views/project_data/new.html.erb
@@ -1,13 +1,15 @@
-<div id="new_project_file_upload_box" class="new_project_file_upload_box">
-
-  <div>
-    Drag n Drop here for a new project.
+<div class="row">
+  <div class="col">
+    <div id="new_project_file_upload_box" class="new_project_file_upload_box">
+      <div>
+        Drag n Drop your data here.
+      </div>
+    </div>
   </div>
-
 </div>
 
 <div class="new_project_form">
-<%= form_with(model: @project, local: true) do |form| %>
+<%= form_with(model: [@project, @project_datum], local: true) do |form| %>
 <%= form.file_field :upload_file, :id => 'upload_file' %>
 <%= form.submit "Upload" %>
 <% end %>
