--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,8 +1,8 @@
-<div class="col-lg-12">
-  <h1>New Project</h1>
-</div>
-<div class="new_project_container row">
+<div class="row">
   <div class="col-lg-12">
-    <%= render 'form', project: @project %>
+    <h1>Create a new project</h1>
   </div>
+</div>
+<div class="new_project_container">
+    <%= render 'form', project: @project %>
 </div>
