--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,17 +1,19 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <p id="notice"><%= notice %></p>
+<% end %>
 <div class="row">
-  <div class="col col-lg-3">
+  <div class="col">
     <h1><%= @project.name %></h1>
-  </div>
-  <div class="col col-lg-3">
     <%= link_to 'Add data', new_project_project_datum_path(@project) %>
   </div>
 </div>
 <div class="row">
-  <div class="col col-lg-12">
-    <h2>Project Data List</h2>
+  <div class="col">
+    <h2>Data list</h2>
   </div>
-  <div class="col col-lg-12">
+</div>
+<div class="row">
+  <div class="col">
     <table class="table table-hover">
       <thead>
         <tr>
