--- a/app/assets/stylesheets/project_data.scss
+++ b/app/assets/stylesheets/project_data.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 // just project new page
+@import "bootstrap";
+
 html, body, .container {height: 100%;}
 .new_project_file_upload_box {
   line-height: 300px;
@@ -17,4 +19,8 @@ html, body, .container {height: 100%;}
 
 .deactive_column {
   background-color: #a0a0a0;
+}
+
+.target_column {
+  border: solid 3px $blue;
 }
