--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,7 @@ a:hover, a:focus
   background-color: transparent;
   color: $blue;
 }
+.error-messages-container {
+  color: $red;
+  text-align: left;
+}
