--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,22 +1,29 @@
 <%= form_with(model: project, local: true) do |form| %>
-  <% if project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
-
-      <ul>
-      <% project.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <% if project.errors.any? %>
+      <div class="col col-lg-4 offset-lg-4 error-messages-container">
+        <p><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</p>
+        <ul>
+        <% project.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+  </div>
 
   <div class="col col-lg-4 offset-lg-4">
     <div class="form-group">
-      <%= form.label :name, 'Project Name'  %>
-      <%= form.text_field :name  %>
+      <div class="col">
+        <%= form.label :name, 'Name' %>
+        <%= form.text_field :name  %>
+      </div>
+      <div class="col">
+        <%= form.label :purpose, 'Purpose'  %>
+        <%= form.text_area :purpose %>
+      </div>
       <div class="actions">
         <%= form.submit "create", :class => 'btn btn-primary' %>
       </div>
+    </div>
   </div>
 <% end %>
